converted exceptions, DAOMapper, network package, Config, RequiredModel to kotlin and propagated changes